add_executable(01_SequenceTable 01_SequenceTable/SequenceTable.h 01_SequenceTable/SequenceTable.c 
			   01_SequenceTable/SequenceTable_main.c)

add_executable(02_LinkedList 02_LinkedList/LinkedList.h 02_LinkedList/LinkedList.c 02_LinkedList/LinkedList_main.c)

add_executable(03_LoopList 03_LoopList/LoopList_main.c 03_LoopList/LoopList.c 03_LoopList/LoopList.h)
