add_executable(01_BinaryTree 01_BinaryTree/BinaryTree_main.c 01_BinaryTree/BinaryTree.c 01_BinaryTree/BinaryTree.h)

add_executable(02_InorderThreadedBinaryTree 02_InorderThreadedBinaryTree/InorderThreadedBinaryTree_main.c 02_InorderThreadedBinaryTree/InorderThreadedBinaryTree.c
02_InorderThreadedBinaryTree/InorderThreadedBinaryTree.h)