add_executable(01_BinaryTree 01_BinaryTree/BinaryTree_main.c 01_BinaryTree/BinaryTree.c 01_BinaryTree/BinaryTree.h)

add_executable(02_InorderThreadedBinaryTree 02_InorderThreadedBinaryTree/InorderThreadedBinaryTree_main.c 02_InorderThreadedBinaryTree/InorderThreadedBinaryTree.c
02_InorderThreadedBinaryTree/InorderThreadedBinaryTree.h)

add_executable(03_BinarySearchTree 03_BinarySearchTree/BinarySearchTree_main.c 03_BinarySearchTree/BinarySearchTree.c 03_BinarySearchTree/BinarySearchTree.h)

add_executable(04_AVLTree 04_AVLTree/AVLTree_main.c 04_AVLTree/AVLTree.c 04_AVLTree/AVLTree.h)

add_subdirectory(05_UnionFindSet)

add_executable(07_HuffmanTree 06_HuffmanTree/HuffmanTree_main.c 06_HuffmanTree/HuffmanTree.c 06_HuffmanTree/HuffmanTree.h)