add_executable(01_MatrixGraph 01_MatrixGraph/MatrixGraph_main.c 01_MatrixGraph/MatrixGraph.c 01_MatrixGraph/MatrixGraph.h)

add_executable(02_AdjacencyList 02_AdjacencyList/AdjacencyList_main.c 02_AdjacencyList/AdjacencyList.c 02_AdjacencyList/AdjacencyList.h)

add_subdirectory(03_MinTree)

add_executable(05_ShortPath 04_ShortPath/Dijkstra_main.c 04_ShortPath/Dijkstra.c 04_ShortPath/Dijkstra.h)

add_executable(06_TopologicalSort 05_TopologicalSort/TopologicalSort_main.c 05_TopologicalSort/TopologicalSort.c 05_TopologicalSort/TopologicalSort.h)