add_executable(01_InsertSort 01_InsertSort/InsertSort_main.c 01_InsertSort/InsertSort.c 01_InsertSort/InsertSort.h)

add_executable(02_QuickSort 02_QuickSort/QuickSort_main.c 02_QuickSort/QuickSort.c 02_QuickSort/QuickSort.h)

add_executable(03_HeapSort 03_HeapSort/HeapSort_main.c 03_HeapSort/HeapSort.c 03_HeapSort/HeapSort.h)